2025-04-25 3.18
    - pridaná autorizácia k SCC serverom

2025-04-04 3.17
    - oprava pádov pri chybe v komunikácii s Trakt.tv

2025-02-15 3.16
    - aktualizácia závislostí doplnku

2025-01-07 3.15
    - oprava pádov pri chybe v komunikácii s Trakt.tv

2024-12-28 3.14
    - pridanie vyhľadania do kategórie dokumenty, anime a koncerty
    - pridanie vyhľadávania podľa názvu a mena herca bez ohľadu na typ (nájde filmy aj seriály zároveň)
    - oprava rozšíreného filtrovania dabovaných položiek a položiek s titulkami
    - pridanie vyhľadávania podľa mena herca do kontextového menu

2024-12-01 3.13
    - pridané rozšírené triedenie a filtrovanie dostupné cez kontextové menu
    - umožňuje filtrovať a triediť výsledky podľa rôznych kategórii

2024-08-21 3.12
    - prehrávanie trailerov z youtube cez priame volanie yt doplnku

2024-03-05 3.11
    - nahradenie interného klienta prehraj.to za priame volanie nového prehraj.to doplnku

2024-01-27 3.10
    - priadnie podpory pre virtuálne profily v ArchivCZSK >= 2.5.0

2024-01-08 3.9
    - úpravy kvôli zmene spôsobu fungovania rodičovskej kontroly
    - automatické nastavovanie timeoutu a možnosť zapnúť/vypnúť verifikáciu SSL certifikátov

2023-12-30 3.8
    - aplikovanie zmeny timeoutu bez reštartu

2023-12-01 3.7
    - oprava nastavenia časov pre preskočenie záverečných titulkov
    - oprava filtrovania >1080p streamov
    - vylepšenie filtrov pre HDR a Dolby Vision
    - pridanie filtra pre 3D streamy

2023-10-27 3.6
    - oprava vyhľadania na prehraj.to

2023-04-24 3.5
    - oprava zobrazovania bonusových sezón

2023-04-24 3.4
    - nastavovanie dát pre preskočenie úvodnej zvučky a záverečných titulkov u seriálov
    - oprava vyhľadávania bez predchádzajúceho spustenia doplnku
    - oprava kontroly zostávajúcich dni predplatného

2023-04-17 3.3
    - nastavovanie lepšieho názvu súboru pri sťahovaní epizód u seriálov
    - workaround pre chybný formát vrátených dát zo servera pre sekciu filmy